Fix alignment of "Disabled" title in the sidebar

--- a/assets/stylesheets/components/_sidebar.scss
+++ b/assets/stylesheets/components/_sidebar.scss
@@ -86,7 +86,7 @@
 ._list-title {
   position: relative;
   margin: .5rem 0 0;
-  padding: 0 .75rem 0 2.25rem;
+  padding: 0 .75rem 0 2.125rem;
   line-height: 2rem;
   font-size: .75rem;
   color: $textColorLight;
